# TheNine

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: BUSINESS.md  PLAN.md  package-manager.json  settings.local.json
.claude/commands/: agents.md  ckb.md  docs.md  finish.md  gcp.md  init.md  kb.md  learn.md  lego.md  plan.md  start.md  test.md
.claude/knowledge/: index.md
.claude/knowledge/domain/: autonomous-development.md
.claude/knowledge/gotchas/: windows-encoding.md
.claude/knowledge/technical/: gemini-api.md
.claude/rules/: agents.md  coding-style.md  patterns.md  performance.md  philosophy.md
.claude/skills/agents/: SKILL.md
.claude/skills/central-kb/: SKILL.md
.claude/skills/consult/: SKILL.md
.claude/skills/docs/: SKILL.md
.claude/skills/gcp/: SKILL.md
.claude/skills/git/: SKILL.md
.claude/skills/knowledge/: SKILL.md
.claude/skills/learn/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/templates/: API.template.md  ARCHITECTURE.template.md  CHANGELOG.template.md  README.template.md
scripts/: gemini_consult.py
src/thenine/: __init__.py  __main__.py  cli.py
src/thenine/core/: __init__.py  brand.py  palette.py  tokens.py  typography.py
src/thenine/generators/: __init__.py  card_3d.py  card_pdf.py  website.py
src/thenine/infra/: __init__.py  cloudflare_dns.py  google_fonts.py  (+1 more)
templates/astro-landing/: package.json
tests/: conftest.py
tests/integration/: test_brand_pipeline.py
tests/unit/: test_brand.py  test_card_3d.py  test_card_pdf.py  test_cli.py  test_infra.py  test_palette.py  test_tokens.py  test_typography.py
(+8 files in other folders)
